<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollViewAdvanced">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:weightSum="1">

        <!--<com.google.android.gms.ads.AdView
            android:id="@+id/adViewInSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="7dp"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id2">
        </com.google.android.gms.ads.AdView>-->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/advancedlinearlayout"
        android:weightSum="1">

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_enable_adb"
            android:id="@+id/switch1"
            android:layout_gravity="right"
            android:textAlignment="gravity"
            android:layout_marginBottom="3dp"
            android:textSize="16dp" />

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_disable_notifs"
            android:id="@+id/switch2"
            android:layout_marginBottom="3dp"
            android:textSize="16dp" />

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_auto_start"
            android:id="@+id/switch3"
            android:layout_marginBottom="3dp"
            android:textSize="16dp" />

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_enable_auto_update_check"
            android:id="@+id/switch4"
            android:layout_marginBottom="3dp"
            android:textSize="16dp" />

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_enable_mediascan"
            android:id="@+id/switch5"
            android:layout_marginBottom="3dp"
            android:textSize="16dp" />

        <Button
            android:text="@string/action_select_mediascan_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button3"
            android:visibility="gone"
            android:onClick="pickRootDir" />

        <TextView
            android:text="@string/settings_layout_mediascan_path"
            android:layout_width="336dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:visibility="gone" />

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adViewInSettingsBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id3" >
    </com.google.android.gms.ads.AdView>

    </LinearLayout>

</ScrollView>